--- a/public/less/theme/_single-view.less
+++ b/public/less/theme/_single-view.less
@@ -569,7 +569,7 @@
 		}
 		.mobile--enquiry{
 			width: 100%;
-			margin-top: 1.5em;
+			margin-top: 1em;
 			.contact__title{
 				margin-bottom: 5px;
 			}
@@ -2371,6 +2371,7 @@
     	background-color: #f3f3f3;
     	position: relative;
     	padding-top: 4em;
+    	margin-top: -1em;
     	.direction-down{
     		display: inline-block;
     	}
@@ -3484,6 +3485,10 @@ and (max-device-width: 650px) {
     		.contact-social .share-btn{
     			padding: 0.8em 1em;
     		}
+		}
+		.show-contact{
+			border-bottom: 1px solid #ddd;
+    		padding-bottom: 1em;
 		}
 	}
 }
